--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,38 +1,42 @@
-{% extends "main.html" %} {% block content %}
+{% extends "main.html" %}
+{% block content %}
 
-<style>
-  .home-container {
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-  }
-</style>
 
-<h2>This is home page</h2>
-<div class="home-container">
-  <div></div>
-  <div class="todo-list">
-
-    
-    {% for todo in todos %}
-    <div>
-        <form method="post" action="{% url 'home' %}">
-            {% csrf_token %}
-
-            <input type="hidden" name="todo_id" value="{{ todo.id }}">
-            <input type="checkbox" name="completed" onchange="this.form.submit()" {% if todo.completed %}checked{% endif %}>
-            <span {% if todo.completed %}class="completed"{% endif %}> <strong>{{ todo.title }}</strong></span>
-        </form>
-        <a href="{% url "update-todo" todo.id %}"><button>Edit</button></a>
+    <div class="container mt-5">
         
-    </div>
-    {% endfor %}
+        <div class="todos-container">
+            <h2>You have {{incomplete_todos}} incomplete Tasks</h2>
+            
+            {% for todo in todos %}
+            <div class="todo-item d-flex justify-content-between align-items-center border p-3 mb-2 bg-light rounded">
+                
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <div class="form-check">
+                        
+                        <input type="hidden" name="todo_id" value="{{ todo.id }}">
 
-    <div>
-        <br>
-        <a href="{% url "add_todo" %}"><button>Add ToDo</button></a>
-    </div>
-  </div>
-  <div></div>
-</div>
+                        <input type="checkbox" class="form-check-input" id="todo{{ todo.id }}" name="completed" onchange="this.form.submit()" {% if todo.completed %}checked{% endif %}>
 
+                        <label class="form-check-label {% if todo.completed %}completed{% endif %}" for="todo{{ todo.id }}">
+                            <strong>{{ todo.title }}</strong>
+                        </label>
+
+                    </div>
+                </form>
+
+                <div>
+                    <a href="{% url 'update-todo' todo.id %}" class="btn btn-primary btn-sm">Edit</a>
+                    <a href="{% url 'delete-todo' todo.id %}" class="btn btn-danger btn-sm">Delete</a>
+                </div>
+            </div>
+            {% empty %}
+            <p>No todos available. Start by adding a new todo.</p>
+            {% endfor %}
+            <a href="{% url 'add_todo' %}" class="btn btn-success mb-3">Add Todo</a> <!-- Add Todo Button -->
+        </div>
+
+        
+
+    </div>
 {% endblock %}
